Calling json file

--- a/cart.html
+++ b/cart.html
@@ -269,5 +269,6 @@
     <script src="JS/all.min.js"></script>
     <script src="JS/bootstrap.bundle.min.js"></script>
     <script src="JS/main.js"></script>
+    <script src="./JSON/products.json"></script>
   </body>
 </html>
