--- a/index.html
+++ b/index.html
@@ -863,6 +863,8 @@
     </footer>
     <script src="JS/all.min.js"></script>
     <script src="JS/bootstrap.bundle.min.js"></script>
-    <script src="JS/main.js"></script>
+    <script src="JS/main.js" type="text/javascript"></script>
+    <script src="./JSON/products.json"></script>
+
   </body>
 </html>
